crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_8.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_8.py:5:5
  |
4 | def main():
5 |     exit(0)
  |     ^^^^
help: Replace `exit` with `sys.exit()`
  |
1 ~ from sys import argv, exit
2 |
3 |
4 | def main():
5 ~     exit(0)
  |
note: This is an unsafe fix and may change runtime behavior
