crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1730_min_instead_of_if.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
min_instead_of_if.py:8:1: PLR1730 Consider using `value = min(value, 10)` instead of unnecessary if block
   |
 7 |   # Positive
 8 | / if value > 10:  # [min-instead-of-if]
 9 | |     value = 10
   | |______________^ PLR1730
10 |   
11 |   if value >= 10:  # [min-instead-of-if]
   |

min_instead_of_if.py:11:1: PLR1730 Consider using `value = min(value, 10)` instead of unnecessary if block
   |
 9 |       value = 10
10 |   
11 | / if value >= 10:  # [min-instead-of-if]
12 | |     value = 10
   | |______________^ PLR1730
13 |   
14 |   if value > value2:  # [min-instead-of-if]
   |

min_instead_of_if.py:14:1: PLR1730 Consider using `value = min(value, value2)` instead of unnecessary if block
   |
12 |       value = 10
13 |   
14 | / if value > value2:  # [min-instead-of-if]
15 | |     value = value2
   | |__________________^ PLR1730
   |

min_instead_of_if.py:24:1: PLR1730 Consider using `A1.value = min(A1.value, 10)` instead of unnecessary if block
   |
23 |   A1 = A()
24 | / if A1.value > 10:  # [min-instead-of-if]
25 | |     A1.value = 10
   | |_________________^ PLR1730
   |

min_instead_of_if.py:48:1: PLR1730 Consider using `A2 = min(A2, A1)` instead of unnecessary if block
   |
46 |   A2 = AA(3)
47 |   
48 | / if A2 > A1:  # [min-instead-of-if]
49 | |     A2 = A1
   | |___________^ PLR1730
50 |   
51 |   if A2 >= A1:  # [min-instead-of-if]
   |

min_instead_of_if.py:51:1: PLR1730 Consider using `A2 = min(A2, A1)` instead of unnecessary if block
   |
49 |       A2 = A1
50 |   
51 | / if A2 >= A1:  # [min-instead-of-if]
52 | |     A2 = A1
   | |___________^ PLR1730
53 |   
54 |   # Negative
   |


