crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1732_open_without_with.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
open_without_with.py:30:1: PLR1732 Consider using `with open(...) as ...:` instead of `open(...)`
   |
29 | # Bad usage
30 | open()  # [open-without-with]
   | ^^^^^^ PLR1732
31 | 
32 | open('path', "wb")  # [open-without-with]
   |

open_without_with.py:32:1: PLR1732 Consider using `with open(...) as ...:` instead of `open(...)`
   |
30 | open()  # [open-without-with]
31 | 
32 | open('path', "wb")  # [open-without-with]
   | ^^^^^^^^^^^^^^^^^^ PLR1732
33 | 
34 | f = open('path', "wb")  # [open-without-with]
   |

open_without_with.py:34:5: PLR1732 Consider using `with open(...) as ...:` instead of `open(...)`
   |
32 | open('path', "wb")  # [open-without-with]
33 | 
34 | f = open('path', "wb")  # [open-without-with]
   |     ^^^^^^^^^^^^^^^^^^ PLR1732
35 | 
36 | f.close()
   |

open_without_with.py:38:5: PLR1732 Consider using `with open(...) as ...:` instead of `open(...)`
   |
36 | f.close()
37 | 
38 | foo(open('path', "wb"))  # [open-without-with]
   |     ^^^^^^^^^^^^^^^^^^ PLR1732
39 | 
40 | with foo(open('path', "wb")) as f:  # [open-without-with]
   |

open_without_with.py:40:10: PLR1732 Consider using `with open(...) as ...:` instead of `open(...)`
   |
38 | foo(open('path', "wb"))  # [open-without-with]
39 | 
40 | with foo(open('path', "wb")) as f:  # [open-without-with]
   |          ^^^^^^^^^^^^^^^^^^ PLR1732
41 |     pass
   |

open_without_with.py:43:1: PLR1732 Consider using `with open(...) as ...:` instead of `open(...)`
   |
41 |     pass
42 | 
43 | Path('path').open()  # [open-without-with]
   | ^^^^^^^^^^^^^^^^^^^ PLR1732
   |
